--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.3",
+    "@ramonak/react-progress-bar": "^4.2.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^17.0.2",
