--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.3",
     "@ramonak/react-progress-bar": "^4.2.0",
     "@testing-library/jest-dom": "^5.16.1",
@@ -15,6 +16,8 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
+    "sharethis-reactjs": "^1.6.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/react": "^3.1.0"
   }
 }
